<resources>
    <string name="app_name">Управление звонками</string>
    <string name="all_timetables">Все расписания</string>
    <string name="current_timetable">Текущее расписание</string>
    <string name="apply">Применить</string>
    <string name="details">Подробнее</string>
    <string name="add">Добавить</string>
    <string name="edit">Редактировать</string>
    <string name="connect">Подключение к устройству</string>
    <string name="exception">Ошибка</string>
    <string name="auth">Аутентификация</string>
    <string name="sending_data">Отправление данных</string>
    <string name="error_while_sending_data">Ошибка при отправке данных</string>
    <string name="ready">Задача завершена</string>
    <string name="mode_not_work_on_weekends">Не работает в выходные</string>
    <string name="mode_work_on_saturday">Работает по субботам</string>
    <string name="mode_work_on_weekends">Работает по выходным</string>
    <string name="device_disable_due_weekend_settings">Устройство не будет работать сегодня в связи с настройками режима работы в выходные дни.</string>
    <string name="device_disable_due_manual_mode">Установлен автономный режим, устройство не будет подавать звонки автоматически до отключения режима.</string>
    <string name="settings">Настройки</string>
    <string name="select_weekend_mode">Выбор режима работы в выходные</string>
    <string name="remove">Удалить</string>
    <string name="removing">Удаление</string>
    <string name="removing_description">Вы уверены что хотите удалить расписание?</string>
    <string name="detail_edit">Подробное редактирование</string>
    <string name="detail_edit_description">Позволяет настроить время звонка с точностью до секунд</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="add_lesson">Добавить урок</string>
    <string name="_00_00_00_00" translatable="false">00:00:00 – 00:00:00</string>
    <string name="loading_timetable">Загрузка расписания</string>
    <string name="do_not_closing_app_while_loading">Не закрывайте приложение во время загрузки</string>

    <string name="incorrect_input_time">Неверно введено время</string>
    <string name="incorrect_timetable_title">Неверно введено название расписания</string>

    <string name="timetable_was_not_added">Расписание не было добавлено. Проверьте введенные данные</string>
    <string name="timetable_was_not_updated">Расписание не было обновлено. Проверьте введенные данные</string>

    <string name="timetables_list_updated">Список расписаний был обновлен</string>
    <string name="applied_timetable_updated">Последнее примененное расписание было обновлено</string>

    <!-- Описания ошибок -->
    <string name="address_is_empty">Не удалось получить адрес</string>
    <string name="bluetooth_is_disabled">Для корректной работы приложения требуется Bluetooth. Проверьте, что он включен и повторите попытку.</string>
    <string name="device_not_found">Устройство не найдено. Проверьте, что оно включено и находится достаточно близко.</string>
    <string name="location_permission_denied">Для корректной работы Bluetooth требуется доступ к местоположению устройства.</string>
    <string name="bluetooth_was_not_initialized">Не удалось перевести Bluetooth в режим поиска. Попробуйте еще раз.</string>
    <string name="bluetooth_not_supported">Этот телефон не поддерживает работу с Bluetooth.</string>
    <string name="desc_auth_error_not_recognized">Устройству не удалось распознать телефон. Попробуйте еще раз или сбросьте настройки устройства пользуясь инструкцией.</string>
    <string name="desc_auth_error_unexpected">Не удалось подключиться к устройству. Попробуйте еще раз</string>
    <string name="unsuccess_response">Не удалось применить отправленные данные. Повторите попытку.</string>
    <string name="unsuccessful_select">Ошибка при поиске</string>
    <string name="error_while_receive_data">Ошибка при получении данных. От устройства были получены данные, но их не удалось обработать. Попробуйте повторить выполняемую операцию</string>
    <string name="error_while_connection">Ошибка при подключении к устройству. Убедитесь, что оно включено и находиться достаточно близко и попробуйте еще раз</string>

    <string name="wrong_number_format">Не число</string>
    <string name="too_small_value">Слишком маленькое значение (&lt; 500)</string>
    <string name="too_big_value">Слишком большое значение (> 30000)</string>
    <string name="too_small_value_n">Слишком маленькое значение (&lt; 3)</string>
    <string name="too_big_value_n">Слишком большое значение (> 59)</string>
    <string name="changes_did_not_complet">Изменение не завершено</string>

    <!-- Содержание Snackbar'а -->
    <string name="initialization">Инициализация…</string>
    <string name="waiting_for_bluetooth">Ожидание Bluetooth…</string>
    <string name="connecting_to_device">Подключение к устройству…</string>
    <string name="connected">Успешно подключено</string>
    <string name="bluetooth_error">Ошибка при работе Bluetooth</string>
    <string name="failed_to_connect">Не удалось подключиться к устройству. Убедитесь, что вы выбрали правильное устройство.</string>

    <string name="error_while_connecting">Ошибка при подключении к устройству</string>
    <string name="error_while_connecting_desc">Ошибка при подключении. Убедитесь, что:\n\n • Bluetooth включен\n\n • Определение геопозиции включено\n\n • Вы находитесь близко к устройству, к которому подключаетесь \n\n • Вы подключаетесь к верному устройству</string>

    <string name="location_perm_deny">Для продолжения необходимо разрешить определять геолокацию</string>
    <string name="location_perm_deny_description">Для работы с Bluetooth приложению необходимо разрешение на получение точного местоположения.\n\nКак это работает:\n\n• По названию сети можно получить примерное местоположение пользователя, поэтому требуется разрешение на получение геопозиции для любой работы с Bluetooth\n\n• Приложение не использует данные ваших Bluetooth сетей для определения вашей геопозиции\n\n• Если вы уже отказались предоставить соответсвующее разрешение, перейдите в настройки и сделайте это вречную</string>

    <string name="unsuccessfully_response">Не удалось выполнить последнюю операцию</string>
    <string name="unsuccessfully_response_description">Не удалось выполнить последнюю операцию.\n\n • Убедитесь, что устройство находится достаточно близко к телефону\n\n • Попробуйте повторить попытку\n\n • Если ошибка происходит снова, попробуйте сбросить память устройства</string>

    <string name="auth_error">Ошибка аутентификации</string>
    <string name="data_updated">Данные обновлены</string>
    <string name="error_while_reading">Ошибка при чтении входящего сообщения</string>

    <string name="lessons">уроки</string>
    <string name="retry">Повторить попытку</string>
    <string name="last_applied">Последнее примененное расписание</string>
    <string name="timetable_title">Название расписания</string>
    <string name="remove_last_lesson">Удалить последний урок</string>
    <string name="debug">Debug-версия</string>
    <string name="bluetooth_debug_menu" translatable="false">Bluetooth</string>
    <string name="add_test_lesson">+ урок</string>
    <string name="remove_test_lesson">- урок</string>

    <!-- Для String.format -->
    <string name="lesson">Урок %d</string>
    <string name="format_time_title">Урок %d</string>
    <string name="format_test_timetable_desc">Уроки - %d, звонки - %d, начиная с текущего времени плюс 30 секунд</string>
    <string name="format_timetable_desc">Уроки - %d: %s</string>
    <string name="format_preview_time">%s – %s</string>
    <string name="format_ring_duration">%d секунд</string>

    <string name="test_timetable">Тестовое расписание</string>
    <string name="error_reasons">Причина ошибки</string>
    <string name="select_device">Выберите устройство для подключения</string>
    <string name="cant_find_device">Устройства нет в списке или вы еще не подключились к нему?</string>
    <string name="connect_device">Подключиться к устройству</string>
    <string name="no_one_bonded_device">Не найдено ни одного Bluetooth-устройства или произошла ошибка при поиске</string>
    <string name="go_to_settings">Перейти в настройки</string>
    <string name="choose_device_caption">Выберите подключенное устройство. Для обновления потяните список</string>
    <string name="ring_duration">Длительность звонка</string>
    <string name="set_in_milliseconds">Устанавливается в секундах</string>
    <string name="weekend_mode">Режим работы в выходные</string>
    <string name="manual_mode">Ручной режим</string>
    <string name="manual_mode_description">Пока активировано, звонки не будут подаваться автоматически</string>
    <string name="unknown_device_name">Неизвестное имя устройства</string>
    <string name="discovery_mode_not_started">Не удалось начать поиск устройств. Убедитесь, что\n\n • На телефоне включен Bluetooth\n\n • На телефоне включено определение местоположения</string>
    <string name="error_while_send_data">Произошла ошибка при отправке данных на устройство. Убедитесь, что\n\n • Вы находитесь достаточно близко к устройству и подключены к нему\n\n • На телефоне включено определение местоположения\n\n • Приложение имеет разрешение на определение геопозиции</string>
    <string name="saved_device_not_bonded">Не удалось найти сохраненное устройство среди соединенных с устройством. Попробуйте подключиться к устройству заново</string>

    <string name="support">Техническая поддержка</string>
    <string name="support_email">ximand931@gmail.com</string>
    <string name="no_one_client_title">Невозможно отправить письмо</string>
    <string name="no_one_email_client">На телефоне не установлено ни одного почтового клиента, с которого можно было бы отправить сообщение</string>

    <string name="stub" translatable="false">Stub</string>

    <string name="success_sent">Данные успешно отправлены на устройство</string>
    <string name="go_to_notification_settings">Перейти в настройки разрешений</string>
    <string name="restart_app">Перезапустить приложение</string>

    <string name="error_format">Ошибка 0x%02X</string>

    <string-array name="weekend_mods">
        <item>@string/mode_not_work_on_weekends</item>
        <item>@string/mode_work_on_saturday</item>
        <item>@string/mode_work_on_weekends</item>
    </string-array>

</resources>
