<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.happs.ximand.ringcontrol.viewmodel.fragment.AllTimetablesViewModel" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/AppCaptionWithIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/connecting_to_device"
            android:visibility="@{!viewModel.applyingPossible ? View.VISIBLE : View.GONE}" />

        <TextView
            android:id="@+id/info_device_disable_1"
            style="@style/AppCaptionWithIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/device_disable_due_weekend_settings"
            android:visibility="@{viewModel.isWeekendModeCaptionShouldBeShown(viewModel.weekendModeLiveData) ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/info_device_disable_2"
            style="@style/AppCaptionWithIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/device_disable_due_manual_mode"
            android:visibility="@{viewModel.manualModeStateLiveData ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@+id/info_device_disable_1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_timetables_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:overScrollMode="ifContentScrolls"
            app:layout_constraintTop_toBottomOf="@+id/info_device_disable_2"
            tools:listitem="@layout/item_timetable" />

    </LinearLayout>

</layout>