<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="applyingPossible"
            type="androidx.databinding.ObservableBoolean" />

        <variable
            name="appliedTimetableId"
            type="androidx.databinding.ObservableInt" />

        <variable
            name="timetable"
            type="com.happs.ximand.ringcontrol.model.object.Timetable" />

        <variable
            name="applyClickListener"
            type="com.happs.ximand.ringcontrol.OnEventListener&lt;com.happs.ximand.ringcontrol.model.object.Timetable>" />

        <variable
            name="detailsClickListener"
            type="com.happs.ximand.ringcontrol.OnEventListener&lt;com.happs.ximand.ringcontrol.model.object.Timetable>" />

        <import type="android.view.View" />

        <import type="com.happs.ximand.ringcontrol.viewmodel.util.BindingConverters" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/last_applied"
                android:visibility="@{timetable.id == appliedTimetableId ? View.VISIBLE : View.GONE}" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@{timetable.title}"
                android:textColor="@color/colorHeadline"
                tools:text="Заголовок" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:ems="20"
                android:text="@{String.format(@string/format_timetable_desc, timetable.lessons.size(), BindingConverters.convertListToLessonsDetails(timetable.lessons))}"
                tools:text="Описание" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="@{applyingPossible}"
                    android:onClick="@{() -> applyClickListener.onEvent(timetable)}"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/apply"
                    app:strokeColor="@android:color/transparent" />

                <Button
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:onClick="@{() -> detailsClickListener.onEvent(timetable)}"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/details"
                    app:strokeColor="@android:color/transparent" />

            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
</layout>